--- a/public/stylesheets/components/hero.css
+++ b/public/stylesheets/components/hero.css
@@ -41,9 +41,14 @@ border-radius:50px;text-align:center;background:var(--yellow);box-shadow:var(--s
     .hero-object2 {width:120%;margin-left:-3%;margin-top:-9%;}
     .hero-object3 {right:8%;bottom:-30%;}
 
-    .hero-cta {width:220px;
+    .hero-cta {
+        width:220px;
+    }
+    .home-cta {
+        
         bottom: calc(constant(safe-area-inset-bottom) + 0rem);
-    bottom: calc(env(safe-area-inset-bottom) + 0rem);}
+        bottom: calc(env(safe-area-inset-bottom) + 0rem);
+    }
     .cta-arrow {width:11px;}
 }
 
