--- a/public/stylesheets/components/hero.css
+++ b/public/stylesheets/components/hero.css
@@ -2,7 +2,7 @@
 
 
 .hero {min-height:100vh;background:var(--blue100);position:relative;}
-.hero-inner {max-width:var(--width-large);min-height:calc(100vh - var(--navbar-height));margin:0 auto;padding:14rem var(--grid-margin);box-sizing:border-box;position: relative;}
+.hero-inner {max-width:var(--width-large);min-height:calc(100vh - var(--navbar-height));margin:0 auto;padding:14rem var(--grid-margin);position: relative;}
 
 .hero-title {margin:0 0 1rem 0;font-size:2.5rem;font-weight:var(--font-weight-bold);}
 .hero-description {}
@@ -46,8 +46,8 @@ border-radius:50px;text-align:center;background:var(--yellow);box-shadow:var(--s
     }
     .home-cta {
         
-        bottom: calc(constant(safe-area-inset-bottom) + 0rem);
-        bottom: calc(env(safe-area-inset-bottom) + 0rem);
+        bottom: calc(constant(safe-area-inset-bottom) + 12px);
+        bottom: calc(env(safe-area-inset-bottom) + 12px);
     }
     .cta-arrow {width:11px;}
 }
