--- a/public/stylesheets/components/hero.css
+++ b/public/stylesheets/components/hero.css
@@ -4,8 +4,8 @@
 .hero {min-height:100vh;background:var(--blue100);position:relative;}
 .hero-inner {max-width:var(--width-large);min-height:calc(100vh - var(--navbar-height));margin:0 auto;padding:14rem var(--grid-margin);position: relative;}
 
-.hero-title {margin:0 0 1rem 0;font-size:2.5rem;font-weight:var(--font-weight-bold);}
-.hero-description {}
+.hero-title {margin:0 0 1rem 0;font-size:3rem;line-height:64px;font-weight:var(--font-weight-bold);}
+.hero-description {line-height:24px;color:#737B7D;}
 .hero-cta {display:flex;align-items:center;justify-content:center;width:260px;height:56px;margin:3rem 0 0;border-radius:50px;box-shadow:var(--shadow400);text-align:center;background:var(--yellow);color:var(--gray0);font-size:18px;font-weight:800;}
 
 .hero-object-group {height:100%;position:absolute;right:-19rem;top:-8rem;}
