--- a/public/stylesheets/abstracts/keyframes.css
+++ b/public/stylesheets/abstracts/keyframes.css
@@ -1,4 +1,3 @@
-@charset "utf-8";
 
 @keyframes fadein {
 	from {opacity: 0;}
@@ -56,18 +55,10 @@
 }
 
 @keyframes tab1-3-1 {
-	0% {
-		opacity:1;
-	}
-	45% {
-	opacity:1;
-	}
-	55% {
-	opacity:0;
-	}
-	100% {
-	opacity:0;
-	}
+	0% {opacity:1;}
+	45% {opacity:1;}
+	55% {opacity:0;}
+	100% {opacity:0;}
 }
 
 
